# pycrograd

./: .gitignore  README.md  pyproject.toml  training_times.md
micrograd/: cli.py  engine.py  nn.py  optimizers.py  trainers.py
notebooks/: demo.ipynb
pycrograd/: __init__.py  cli.py  datasets.py  digits.py  enums.py  grad.py  grads.py  matrix.py  tensor.py  trainers.py  types.py
pycrograd/nn/: __init__.py  init.py  loss.py  models.py  modules.py  optimizers.py
tests/: test_data.py  test_engine.py  test_nn.py  test_tensor.py  test_tensor_backward.py
